{
    "name": "Player2Controls",
    "maps": [
        {
            "name": "Fighting",
            "id": "a1c7270a-fd4d-4928-9790-80afd08c9bbb",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "c0efc001-7c0b-4e3f-9e3c-094585ab6e72",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalMove",
                    "type": "Value",
                    "id": "2717b7db-cf6a-4c8b-95f9-85d533723e21",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LightPunch",
                    "type": "Button",
                    "id": "e0324621-168d-4e48-a273-06b67f8a0c1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyPunch",
                    "type": "Button",
                    "id": "3b7ac9cd-1f45-4cd7-9b1d-649083b27f39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightKick",
                    "type": "Button",
                    "id": "088c982b-ed99-4af6-bd5f-c5646c44665c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyKick",
                    "type": "Button",
                    "id": "5768c740-acf4-4e67-af58-fe4d7f9a6bc6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "0dd4628a-6dc1-4ee3-b8ad-581db0df0782",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15861c21-72ee-45bb-97ca-62ee305d28f0",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b86be0b2-397e-45c9-8bc9-441b3b0be047",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70eb5729-c7e1-4502-8a63-9371cbe65ca1",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c0f178d-798b-4d33-b138-6df4fbc17579",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "HeavyPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c8176a7-9804-4150-a746-db823401ef90",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "LightKick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c16d7e5a-100c-4f52-abbf-a5a3f637cbd2",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "HeavyKick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae75a23a-d67f-4c43-a642-e10609c9b133",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}